# salvo_demo_rbatis

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  docker-compose.yaml  init.sh
config/: config.yml
data/: table_mysql.sql  test_user.sql
src/: app_error.rs  app_response.rs  config.rs  db.rs  main.rs
src/dtos/: mod.rs  page.rs
src/entities/: user.rs
src/middleware/: cors.rs  handle_404.rs
src/routers/: demo.rs  mod.rs  static_routers.rs  user.rs
src/services/: user.rs
src/unit_tests/: unit_tests.rs
src/utils/: rand_utils.rs
