[package]
name = "salvo_demo_rbatis"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
argon2 = { version = "0.5.2", features = [] }
clia-tracing-config = "0.2.7"
jsonwebtoken = "8.3.0"
once_cell = "1.18.0"
rand = { version = "0.8.5", features = [] }
rbatis = { version = "4.4", features = ["debug_mode"] }
rbdc-mysql = { version = "4.4", features = [] }
rbs = { version = "4.4", features = [] }
rust-embed = "8.0.0"
salvo = { version = "0.65", features = ["anyhow", "logging", "cors", "oapi", "jwt-auth", "rustls", "catch-panic", "cookie", "serve-static", "test"] }
serde = "1.0.188"
serde_yaml = "0.8.26"
thiserror = "1.0.48"
time = "0.3.28"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
validator = { version = "0.16", features = ["derive"] }
